// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KTable default has hover class when passed 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable default has small class when passed 1`] = `
<table class="k-table has-hover is-small side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable default renders link in action slot 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td><a href="#">Link</a></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td><a href="#">Link</a></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable sorting should have sortable class when passed 1`] = `
<table class="k-table has-hover side-border">
  <thead>
    <tr>
      <th class="sortable"><span class="">
              Name
            </span></th>
      <th class=""><span class="">
              ID
            </span></th>
      <th class=""><span class="">
              Enabled
            </span></th>
      <th class=""><span class="sr-only">
              actions
            </span></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Basic Auth</td>
      <td>517526354743085</td>
      <td>true</td>
      <td></td>
    </tr>
    <tr>
      <td>Website Desktop</td>
      <td>328027447731198</td>
      <td>false</td>
      <td></td>
    </tr>
    <tr>
      <td>Android App</td>
      <td>405383051040955</td>
      <td>true</td>
      <td></td>
    </tr>
  </tbody>
</table>
`;

exports[`KTable states displays a loading skeletion when the "isLoading" prop is set to true" 1`] = `
<div class="d-flex flex-wrap w-100 opacity-0">
  <div class="skeleton-table-wrapper">
    <div class="skeleton-table-row">
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
    </div>
    <div class="skeleton-table-row">
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
    </div>
    <div class="skeleton-table-row">
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
    </div>
    <div class="skeleton-table-row">
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
    </div>
    <div class="skeleton-table-row">
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
    </div>
    <div class="skeleton-table-row">
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-10 height-1 mr-6 skeleton-cell"></div>
      <div class="box width-6 height-1 ml-auto skeleton-cell"></div>
    </div>
  </div>
</div>
`;

exports[`KTable states displays an empty state when no data is passed to the table 1`] = `
<section class="empty-state-wrapper">
  <div class="empty-state-title">
    <!---->
    <div class="k-empty-state-title-header">No Data</div>
  </div>
  <div class="empty-state-content">
    <div class="k-empty-state-message">There is no data to display.</div>
    <div class="k-empty-state-cta">
      <!---->
    </div>
  </div>
</section>
`;

exports[`KTable states displays an error state when the "hasError" prop is set to true" 1`] = `
<section class="empty-state-wrapper is-error">
  <div class="empty-state-title">
    <div class="k-empty-state-icon card-icon mb-4 warning-icon"><span class="kong-icon kong-icon-warning"><!----></span></div>
    <div class="k-empty-state-title-header">An error occurred</div>
  </div>
  <div class="empty-state-content">
    <div class="k-empty-state-message">Data cannot be displayed due to an error.</div>
    <div class="k-empty-state-cta">
      <!---->
    </div>
  </div>
</section>
`;
